# stackusage

./: .travis.yml  CMakeLists.txt  LICENSE  Makefile.in  README.md  configure  configure.ac  genman.sh  make.sh
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: linux.yml  macos.yml
src/: Makefile.am  Makefile.in  stackusage  stackusage.1  sumain.c
test/: Makefile.am  Makefile.in  sucpptest.cc  suctest.c  sutest01.c  sutest02.c
tests/: ex001.c  ex002.c  ex003.c  ex004.c  sutest01.c  sutest02.c  test001  test002  test003  test004
