bin_PROGRAMS                 = suctest sucpptest

suctest_SOURCES              = suctest.c
suctest_LDFLAGS              = -lpthread
suctest_CFLAGS               = -Wall -O0

sucpptest_SOURCES            = sucpptest.cc
sucpptest_LDFLAGS            = -lpthread
sucpptest_CXXFLAGS           = -Wall -O0 -std=c++11

