bin_PROGRAMS                 = sutest01 sutest02

sutest01_SOURCES             = sutest01.c
sutest01_LDFLAGS             = -lpthread
sutest01_CFLAGS              = -Wall -O0

sutest02_SOURCES             = sutest02.c
sutest02_LDFLAGS             = -lpthread
sutest02_CFLAGS              = -Wall -O0

