noinst_PROGRAM               = sutest01 sutest02

sutest01_SOURCES             = sutest01.c
sutest01_LDFLAGS             = -lpthread
sutest01_CFLAGS              = -O0 -Wall -Wextra -Wpedantic -std=c99         \
                               -Wshadow -Wpointer-arith -Wcast-qual          \
                               -Wstrict-prototypes -Wmissing-prototypes      \
                               -Wno-missing-braces -Wswitch-default          \
                               -Wcast-align -Wunreachable-code -Wundef       \
                               -Wuninitialized

sutest02_SOURCES             = sutest02.c
sutest02_LDFLAGS             = -lpthread
sutest02_CFLAGS              = -O0 -Wall -Wextra -Wpedantic -std=c99         \
                               -Wshadow -Wpointer-arith -Wcast-qual          \
                               -Wstrict-prototypes -Wmissing-prototypes      \
                               -Wno-missing-braces -Wswitch-default          \
                               -Wcast-align -Wunreachable-code -Wundef       \
                               -Wuninitialized

